better feedback on user errors, more advanced arhitecture, unitmeasure now can be added and deleted...