@@ -1,21 +1,14 @@
 package fyi.hrvanovicm.magacin.application.report.commands;
 
-import fyi.hrvanovicm.magacin.application.product.dto.ProductDetailsDTO;
-import fyi.hrvanovicm.magacin.application.product.requests.ProductEditRequest;
+import fyi.hrvanovicm.magacin.application.BaseHandler;
 import fyi.hrvanovicm.magacin.application.report.dto.ReportDetailsDTO;
-import fyi.hrvanovicm.magacin.application.report.requests.ReceiptReportEditRequest;
 import fyi.hrvanovicm.magacin.application.report.requests.ReportEditRequest;
 import fyi.hrvanovicm.magacin.application.report.requests.ReportProductRequest;
-import fyi.hrvanovicm.magacin.application.report.requests.ShipmentReportRequest;
-import fyi.hrvanovicm.magacin.domain.products.ProductEntity;
-import fyi.hrvanovicm.magacin.domain.products.ProductReceptionEntity;
 import fyi.hrvanovicm.magacin.domain.products.ProductService;
 import fyi.hrvanovicm.magacin.domain.report.ReportEntity;
 import fyi.hrvanovicm.magacin.domain.report.ReportProductEntity;
 import fyi.hrvanovicm.magacin.domain.report.ReportProductUsedReceptionsEntity;
 import fyi.hrvanovicm.magacin.domain.report.ReportService;
-import fyi.hrvanovicm.magacin.domain.unit_measure.UnitMeasureEntity;
-import fyi.hrvanovicm.magacin.domain.unit_measure.UnitMeasureService;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
@@ -23,9 +16,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
-public class UpdateReportHandler {
+public class UpdateReportHandler extends BaseHandler {
     private final ReportService reportService;
     private final ProductService productService;
 
@@ -36,7 +30,9 @@ public class UpdateReportHandler {
     }
 
     @Transactional
-    public ReportDetailsDTO handle(long reportId, @Valid ReportEditRequest request) {
+    public ReportDetailsDTO handle(long reportId, ReportEditRequest request) {
+        super.validate(request);
+
         var report = this.reportService.findById(reportId).orElseThrow(EntityNotFoundException::new);
         request.fill(report);
         this.reportService.save(report);
@@ -54,18 +50,19 @@ public class UpdateReportHandler {
                 var rawMaterialProduct = this.productService.getById(receptionRequest.getRawMaterialId()).orElseThrow(EntityNotFoundException::new);
                 var reportProductReception = new ReportProductUsedReceptionsEntity();
                 reportProductReception.setProduct(product);
+                reportProductReception.setReport(report);
                 reportProductReception.setRawMaterialProduct(rawMaterialProduct);
                 reportProductReception.setAmount(receptionRequest.getAmount());
                 return reportProductReception;
-            }).toList();
+            }).collect(Collectors.toList());
 
             var reportProduct = new ReportProductEntity();
             reportProduct.setProduct(product);
             reportProduct.setReport(report);
             reportProduct.setAmount(request.getAmount());
-            reportProduct.setReceptions(receptions);
+            reportProduct.setUsedReceptions(receptions);
             return reportProduct;
-        }).toList();
+        }).collect(Collectors.toList());
 
         this.reportService.saveProducts(report.getId(), products);
     }
